swap Files.write for bufferedWriter with flush to see file changes earlier