@@ -145,21 +145,22 @@ public class Application {
         return text;
     }
 
-    private static void appendChatToFile(String prompt, String text) throws IOException {
-        // Save the response to a file
-        Path path = Path.of(Chat_Log_MD_PATH);
-        Files.writeString(path,
-                """
-                        REQUEST:
-                        ---------------------------------------------------
-                        %s
-                        
-                        RESPONSE:
-                        ---------------------------------------------------
-                        %s
-                        ===================================================
-                        
-                        """.formatted(prompt, text),
-                StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+private static void appendChatToFile(String prompt, String text) throws IOException {
+    // Save the response to a file
+    Path path = Path.of(Chat_Log_MD_PATH);
+    try (var writer = Files.newBufferedWriter(path, StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
+        writer.write(String.format("""
+                REQUEST:
+                ---------------------------------------------------
+                %s
+
+                RESPONSE:
+                ---------------------------------------------------
+                %s
+                ===================================================
+
+                """, prompt, text));
+        writer.flush(); // Ensure the data is written to the file immediately
     }
+}
 }
